--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -96,7 +96,7 @@ todo    -) Save Default Script Files with the new Script Layout for later Projec
 /* margins */
 body,
 h1, h2, h3, h4, h5, h6,
-figure, picture {1
+figure, picture {
   margin: 0;
 }
 
@@ -177,19 +177,10 @@ header {
   grid: 1fr 1fr / 1fr;
 }
 
-.Class_MainWrapper {
+#ID_MainWrapper {
   display: grid;
   grid: auto / 30% auto 30%;
   grid-template-areas: "leftSide gameboard rightSide";
-}
-
-footer {
-  display: grid;
-  grid: 1fr / 1fr 1fr;
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
 }
 
 /* ===============
@@ -252,15 +243,16 @@ footer {
   display: grid;
   grid: 1fr / repeat(8, 1fr);
   gap: 1em;
+  justify-content: center;
+  text-align: center;
+  margin-block: 1em;
 }
 
 #ID_Choose_KI_Div {
   grid-column-start: 3;
   grid-column-end: 5;
-  margin-bottom: 2rem;
   justify-self: flex-end;
 }
-
 
 /* #endregion */
 
@@ -276,7 +268,6 @@ footer {
   aspect-ratio: 1/1;
   border-left: dashed 0.15rem var(--base-border);
   background-color: var(--base-colour);
-  z-index: -1;
   cursor: pointer;
 }
 
@@ -398,27 +389,22 @@ footer {
   background-color: var(--base-border);
   border-top-left-radius: 10%;
   border-bottom-left-radius: 10%;
-  border: solid 1px var(-base-colour);
   color: var(--main-black);
   text-align: center;
   font-size: large;
+}
+
+#ID_Setting_Span >div{
+  min-width: 100%;
 }
 
 /* ===============
 ?     settings-menu content 
             ================ */
 
-#ID_Info_Container,
-#ID_Delete_All_Container {
-  min-width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
 
-#ID_Info_Container{
-    border-bottom: dashed 4px var(--base-colour);
+#ID_Info{
+  padding-block: 1em; 
 }
 
 #ID_Gameboard_Span{
@@ -449,8 +435,6 @@ footer {
 }
 
 #ID_Mechanic_Settings{
-  border-block: dashed 4px var(--base-colour);
-  min-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -460,7 +444,7 @@ footer {
 #ID_Colour_Container,
 #ID_Language_Container,
 #ID_Sound_Container{
-  min-width: 100%;
+  margin-bottom: .5em;
 }
 
 .Class_Colour_Toggle {
@@ -481,7 +465,7 @@ footer {
 
 #ID_Language_Menu {
   cursor: pointer;
-  width: 50%;
+  width: 80%;
   height: 1.5em;
   border: none;
   margin-bottom: 1em; 
@@ -489,12 +473,12 @@ footer {
 
 #ID_Stats_Container{
   display: grid;
-  grid: 5em 1fr/ 1fr 10% 1fr ;
+  grid: 2em 5em/ 1fr 10% 1fr ;
   grid-template-areas: 
     "h h h"
     "e . n";
   min-width: 100%;  
-  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 #ID_Stats {
@@ -503,27 +487,16 @@ footer {
 
 #ID_Stats_First_Wrapper{
   grid-area: e;
-  min-width: 100%;
-  min-height: 100%;
 }
 #ID_Stats_Second_Wrapper {
   grid-area: n;
-  min-width: 100%;
-  min-height: 100%;
 }
 
-#ID_Contacts_Container{
-  border-top: dashed 4px var(--base-colour);
-}
 
 #ID_Contacts_Container,
-#ID_Credits_Container{
-  min-width: 100%;
-  min-height: 2em;
-}
-
+#ID_Credits_Container,
 #ID_Delete_All_Container{
-  margin-block: 1em;
+  margin-block: .5em;
 }
 
 
@@ -540,15 +513,6 @@ h1, h2, h3, h4, h5, h6 {
  font-size: large;
 }
 
-#ID_Info,
-#ID_Sound,
-#ID_Label_Colour,
-#ID_Language,
-#ID_Stats,
-#ID_Contact,
-#ID_Credits {
-  min-width: 100%;
-}
 
 #ID_Info,
 #ID_Language,
@@ -557,18 +521,12 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 
-#ID_Info {
-  color: var(--main-red);
-}
 
 /* =====
 ?     hover 
             ====== */
 
-#ID_Info:hover  {
-  color: black;
-}
-
+#ID_Info:hover,
 #ID_Stats_First_Wrapper :hover,
 #ID_Stats_Second_Wrapper :hover,
 #ID_Contact:hover,
@@ -592,17 +550,6 @@ h1, h2, h3, h4, h5, h6 {
 
 /* #region 5) typographie */
 
-#ID_Headline {
-  text-align: center;
-}
-
-#ID_Player_1_Headline {
-  width: 100%;
-}
-
-#ID_Player_2_Headline {
-  width: 100%;
-}
 
 #ID_h3_turnText {
   width: 10rem;
@@ -663,17 +610,9 @@ button:hover {
   box-shadow: inset 0 0 1rem white;
 }
 
-#ID_Start_Button {
-  cursor: pointer;
-  min-width: 12.5vw;
-  min-height: 7.5vh;
-}
-
 .Class_Naming_Span {
   display: flex;
   justify-content: center;
-  align-content: center;
-  justify-items: center;
   align-items: center;
 }
 
@@ -742,7 +681,7 @@ select:hover {
 }
 
 #ID_Choose_KI {
-  min-height: 1rem;
+  min-height: rem;
   border-radius: 10rem;
 }
 
@@ -772,7 +711,7 @@ select:hover {
   position: relative;
   cursor: pointer;
   top: 0%;
-  left: 41%;
+  left: 20%;
   width: 3rem;
   height: 1rem;
   background-color: yellow;
