--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -446,11 +446,50 @@ footer {
   margin-bottom: .5em;
 }
 
-.container_colour_toggle {
+#container_colour{
   min-width: 100%;
-  height: 40%;
   display: flex;
+  flex-direction: column;
 }
+
+
+/* =====
+?     toggle 
+            ===== */
+
+
+#container__toggleColour {
+  height: 1em;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#colour_slider{
+  background-color: yellow;
+  height: 100%;                 
+  width: 15%;
+  border-radius: 20%;
+  box-shadow: 0 0 1em black;
+}
+
+#button__toggle {
+  background-color: black;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+}
+
+#button__toggle:hover {
+  background-color: white;
+}
+
+.toggle__colour {
+  transform: translateX(1.8rem);
+}
+
+
+
 
 #h__soundund_Checkbox {
   height: 1.5rem;
@@ -697,45 +736,6 @@ select:hover {
   border-radius: 10rem;
 }
 
-/* =====
-?     toggle 
-            ===== */
-
-#button__toggle {
-  position: relative;
-  top: 0;
-  left: 5%;
-  background-color: white;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-}
-
-#button__toggle:hover {
-  background-color: var(--gameboard);
-}
-
-.Class_Toggle {
-  transform: translateX(1.8rem);
-}
-
-.span_colour_slider {
-  position: relative;
-  cursor: pointer;
-  top: 0%;
-  left: 20%;
-  width: 3rem;
-  height: 1rem;
-  background-color: yellow;
-  transition: all 0.3s ease-in-out;
-  border-radius: 2rem;
-  box-shadow: 0 0 1rem black;
-  border: none;
-}
-
-.span_colour_slider:hover {
-  box-shadow: none;
-}
 
 /* ========
 ?     summarys 
